recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:13: error: recursive variable pas needs type
		var pas = pas-1
                          ^